--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de <senha-Nicoli< /senha-Nicoli></title>
+    <title>Gerador de senha-Nicoli</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,6 +23,24 @@
             <h3 class="parametro-titulo">Personalize sua senha</h3>
             <div class="parametro-coluna__senha">
                 <div class="parametro-senha">
+                    <h4 class="parametro-senha__titulo">Número de caracteres</h4>
+                    <div class="parametro-senha-botoes">
+                        <button class="parametro-senha__botao">-</button>
+                        <p class="parametro-senha__texto">12</p>
+                        <button class="parametro-senha__botao">+</button>
+                    </div>
+                </div>
+                <div class="parametro-senha">
+                    <div class="parametro-senha">
+                        <h4 class="parametro-senha__titulo">Força da senha</h4>
+                        <div class="barra"></div>
+                        <div class="forca fraca"></div>
+                        <div class="parametro-senha-textos">
+                            <p>Fraca</p>
+                            <p>Média</p>
+                            <p>Forte</p>
+                        </div>
+                    </div>
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
                     <div class="parametro-senha-checkbox">
                         <input name="maiusculo" type="checkbox" class="checkbox" checked>
@@ -41,21 +59,10 @@
                         <label for="simbolo">Símbolos</label>
                     </div>
                 </div>
-                <div class="parametro-senha-botoes">
-                    <button class="parametro-senha__botao">-</button>
-                    <p class="parametro-senha__texto">12</p>
-                    <button class="parametro-senha__botao">+</button>
-                </div>
             </div>
-            <div class="parametro-senha">
-                <h4 class="parametro-senha__titulo">Características da senha</h4>
-            </div>
-            <div class="parametro-senha">
-                <h4 class="parametro-senha__titulo">Força da senha</h4>
-            </div>
-        </div>
         </div>
     </section>
 </body>
+<script src="main.js"></script>
 
 </html>
