--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de senha-Nicoli</title>
+    <title>Gerador de senha-Nicoli></title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +17,7 @@
         </div>
         <div class="conteudo-senha">
             <label for="senha">Senha</label>
-            <input name="senha" type="text" id="campo-senha">
+            <input name="senha" type="text" id="campo-senha" readonly>
         </div>
         <div class="parametro">
             <h3 class="parametro-titulo">Personalize sua senha</h3>
@@ -31,16 +31,6 @@
                     </div>
                 </div>
                 <div class="parametro-senha">
-                    <div class="parametro-senha">
-                        <h4 class="parametro-senha__titulo">Força da senha</h4>
-                        <div class="barra"></div>
-                        <div class="forca fraca"></div>
-                        <div class="parametro-senha-textos">
-                            <p>Fraca</p>
-                            <p>Média</p>
-                            <p>Forte</p>
-                        </div>
-                    </div>
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
                     <div class="parametro-senha-checkbox">
                         <input name="maiusculo" type="checkbox" class="checkbox" checked>
@@ -59,10 +49,21 @@
                         <label for="simbolo">Símbolos</label>
                     </div>
                 </div>
+                <div class="parametro-senha">
+                    <h4 class="parametro-senha__titulo">Força da senha</h4>
+                    <div class="barra"></div>
+                    <div class="forca fraca"></div>
+                    <div class="parametro-senha-textos">
+                        <p>Fraca</p>
+                        <p>Média</p>
+                        <p>Forte</p>
+                    </div>
+                    <p class="entropia"></p>
+                </div>
             </div>
         </div>
     </section>
+    <script src="main.js"></script>
 </body>
-<script src="main.js"></script>
 
 </html>
